--- a/layout-content/chart.css
+++ b/layout-content/chart.css
@@ -10,7 +10,7 @@
 }
 
 .tab1 {
-  width: 20%; /* 左侧tab宽度15% */
+  width: 15%; /* 左侧tab宽度15% */
   height: 150px;
   box-sizing: border-box;
   border: 3px solid rgba(169, 169, 169, 0.468);
@@ -30,23 +30,24 @@
 }
 
 .tab2 {
-  width: 80%; /* 右侧tab宽度85% */
+  width: 85%; /* 右侧tab宽度85% */
   height: 150px;
   box-sizing: border-box;
-  border: 3px solid rgba(169, 169, 169, 0.468);
+  border: 3px solid rgba(169, 169, 169, 0.247);
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.145);
   backdrop-filter: blur(10px);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   overflow: hidden; /* 确保内容不溢出 */
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: calc(0.5); /* 默认透明度为0.5 */
 }
 
 .tab1:hover,.tab2:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  opacity: calc(1); /* 鼠标悬停时透明度变为1 */
 }
 
 /* 移动端适配 */
@@ -59,8 +60,8 @@
     display: none; /* 移动端隐藏左侧tab */
   }
   .tab2 {
+    border-radius: 15px;
     width: 100%; /* 移动端两个tab都占满宽度 */
-    height: 120px; /* 移动端稍微减小高度 */
-    border-radius: 0;
+    height: 100px; /* 移动端稍微减小高度 */
   }
 }
