--- a/layout-bottom/personal/info.css
+++ b/layout-bottom/personal/info.css
@@ -3,11 +3,12 @@
   display: flex; position: fixed; z-index: 100;
   bottom: 20px; left: 20px; gap: 20px;
   transition: all 0.3s ease;
+  z-index: 100;
 }
 
 /* 头像区域 */
 .avatar-container {
-  flex-shrink: 0; z-index: 102;
+  flex-shrink: 0; 
   width: 170px; height: 170px;
 }
 
@@ -16,7 +17,8 @@
   display: flex; justify-content: center; align-items: center;
   overflow: hidden; cursor: pointer;
   width: 100%; height: 100%; 
-  border-radius: 50%; border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  border-radius: 50%; border: 3px solid rgba(255, 255, 255, 0.192);
   background-color: rgba(197, 197, 197, 0.2);
   backdrop-filter: blur(5px); box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
