--- a/body/body.css
+++ b/body/body.css
@@ -20,7 +20,9 @@ body {
 html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+
+	width:100%;
+	height:100%;
   overflow: auto; /* 改为auto，允许在需要时出现滚动条 */
   scrollbar-width: none; /* 隐藏滚动条 */
   overflow-y: auto; /* 只允许垂直滚动 */
@@ -61,3 +63,4 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
     transform: translateX(0) translateZ(0);
   }
 }
+
