--- a/layout-top/weather.css
+++ b/layout-top/weather.css
@@ -13,6 +13,7 @@
   border: 1px solid rgba(236, 236, 236, 0.332);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, opacity 0.3s ease;
+  z-index: 1;
 }
 
 .weather-icon {
