--- a/layout-bottom/personal/info.css
+++ b/layout-bottom/personal/info.css
@@ -15,7 +15,7 @@
 /* 圆形头像 */
 .avatar {
   display: flex; justify-content: center; align-items: center;
-  overflow: hidden; cursor: pointer;
+  overflow: hidden; 
   width: 100%; height: 100%; 
   box-sizing: border-box;
   border-radius: 50%; border: 3px solid rgba(255, 255, 255, 0.192);
@@ -45,7 +45,6 @@
 /* 单个按钮 */
 .bottom-button {
   display: flex; justify-content: center; align-items: center; 
-  cursor: pointer;
   width: 36px; height: 36px; 
   border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: rgba(255, 255, 255, 0.126);
@@ -107,7 +106,7 @@
   background-color: rgba(255, 255, 255, 0.06); color: white; 
   font-size: 0.65rem;
   border-radius: 15px; border: 1px solid rgba(255, 255, 255, 0.066);
-  cursor: pointer; transition: all 0.3s ease; white-space: nowrap;
+  transition: all 0.3s ease; white-space: nowrap;
 }
 
 /* 标签悬停效果 */
