--- a/body/menu/menu.css
+++ b/body/menu/menu.css
@@ -9,6 +9,7 @@
   z-index: 9999;
   overflow: hidden;
   backdrop-filter: blur(5px);
+  cursor: pointer;
 }
 
 .menu-item {
@@ -73,7 +74,6 @@
   align-items: center;
   z-index: 99999;
   opacity: 0;
-  pointer-events: none;
   transition: opacity 0.3s;
 }
 
@@ -83,7 +83,6 @@
 
 .about-card.active {
   opacity: 1;
-  pointer-events: auto;
 }
 
 .about-content {
@@ -104,11 +103,12 @@
 .close-btn {
   position: absolute;
   top: 12px;
-  right: 12px;
+  right: 20px;
   background: none;
   border: none;
-  font-size: 20px;
+  font-size: 30px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .about-content h3 {
