--- a/layout-content/mobile.css
+++ b/layout-content/mobile.css
@@ -10,22 +10,23 @@
       grid-template-columns: repeat(2, 1fr); /* 2列 */
       grid-template-rows: repeat(2, 1fr); /* 2行 */
       gap: 15px; /* 移动端减小间距 */
+      padding: 0px;
     }
   
     .content-tab1 {
-      border: 2px solid rgba(169, 169, 169, 0.468);
+      border: 2px solid rgba(169, 169, 169, 0.26);
       border-radius: 0px 20px 20px 20px;  /* 左上右上右下左下 */
     }
     .content-tab2 {
-      border: 2px solid rgba(169, 169, 169, 0.468);
+      border: 2px solid rgba(169, 169, 169, 0.26);
       border-radius: 20px 0px 20px 20px;  
     }
     .content-tab3 {
-      border: 2px solid rgba(169, 169, 169, 0.468);
+      border: 2px solid rgba(169, 169, 169, 0.26);
       border-radius: 20px 20px 20px 0px;  
     }
     .content-tab4 {
-      border: 2px solid rgba(169, 169, 169, 0.468);
+      border: 2px solid rgba(169, 169, 169, 0.26);
       border-radius: 20px 20px 0px 20px;
     }
   
