--- a/layout-bottom/personal/card/card.css
+++ b/layout-bottom/personal/card/card.css
@@ -1,63 +1,53 @@
-/* 修复卡片居中问题 */
+/* info 点击卡片 */
 .modal-overlay {
-  display: none; /* 默认隐藏 */
+  display: none;
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
   z-index: 10;
-  background-color: rgba(0, 0, 0, 0.081);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
+  background-color: #00000055;
 }
 
 .modal-overlay.active {
-  display: flex; /* 激活时显示 */
+  display: flex;
 }
 
-/* 确保卡片在模态框中水平居中 */
 .box {
   position: relative;
-  width: 30%;
-  height: 25%;
+  margin: 0 auto;
+  left: 0;right: 0;
+  width: 30%; height: 25%;
   transform-style: preserve-3d;
-  transform-origin: bottom; /* 设置旋转中心为底部 */
-  margin: 0 auto; /* 添加水平居中 */
-  left: 0; /* 重置任何可能的左偏移 */
-  right: 0; /* 确保不会右偏 */
+  transform-origin: bottom;
 }
 
-/* 调整卡片内容定位 */
 .box div {
   display: flex; position: absolute;
   width: 100%; height: 100%;
-  top: 0; left: 0;  /* 重置位置 */
-  backface-visibility: hidden; /* 隐藏背面 */
+  top: 0; left: 0;
+  backface-visibility: hidden;
   flex-direction: column; 
-  align-items: center; justify-content: center; /* 水平垂直居中 */
-  box-sizing: border-box; /* 确保padding不会导致宽度溢出 */
+  align-items: center; justify-content: center;
 }
 
 .front, .back {
   padding: 20px;
   text-align: center;
-  background-color: rgba(216, 34, 76, 0.451);
-  border-radius: 10px;
-  width: 100%; /* 确保宽度正确 */
-  left: 0; /* 重置左偏移 */
+  background-color: #ffffff16;
+  border-radius: 12px;
 }
 
-  
 .flipped .front {
   opacity: 1;
-  background-color: rgba(216, 34, 76, 0.451);
+  background-color: #ffffff16;
 }
 
 .card-title {
   font-size: 24px;
-  margin-top: -20px;    /* 增加上边距 */
+  margin-top: -20px;
   width: 100%;
   text-align: center;
   color: aliceblue;
@@ -66,15 +56,12 @@
 
 .card-value {
   font-size: 18px;
-  margin-top: 20px;    /* 增加上边距 */
+  margin-top: 20px;
   width: 100%;
   text-align: center;
   color: aliceblue;
 }
 
-
-
-  /* 移动端样式 */
 @media (max-width: 768px) {
   .box {
     font-size: 14px;
@@ -82,7 +69,7 @@
     height: 20%;
     position: relative;
     transform-style: preserve-3d;
-    transform-origin: bottom; /* 设置旋转中心为底部 */
+    transform-origin: bottom;
   }
   .card-title,  .card-value  {
     font-size: 16px;
